# dcc-mcp-substancedesigner

./: .env.example  .gitignore  AGENTS.md  README.md  justfile  pyproject.toml  release-please-config.json
docs/: architecture.md  development.md  install-agent.md  install.md  integration-testing.md  node_definition_v2_canonical_policy.md  substance_designer_atomic_node_definitions.json  substance_designer_function_atomic_node_definitions.json  substance_designer_function_library_node_definitions.json  substance_designer_library_node_definitions.json  substance_designer_library_node_live_probe_results.json  substance_designer_standard_library_resource_index.json  tool-policy.md
examples/: start_server.py
packaging/: assemble_plugin_package.py
plugin/: __init__.py  controls.py  input_normalization.py  json_types.py  plugin_constants.py  plugin_lifecycle.py  plugin_lifecycle_types.py  plugin_refresh.py  sd_serialization.py  sd_serialization_types.py  sd_serialization_values.py
tests/: conftest.py  fake_sd.py  test_authoring_reference.py  test_basic.py  test_bridge.py  test_cli.py  test_commands.py  test_config_examples.py  test_graph_capabilities.py  test_json_types.py  test_live_integration.py  test_live_mutation.py  test_live_verify_tool.py  test_packaging.py  test_plugin_connections.py  test_plugin_contract.py  test_plugin_controls.py  test_plugin_graph_frames.py  test_plugin_graph_lifecycle.py  test_plugin_graph_output_size.py  test_plugin_graph_queries.py  test_plugin_host_resources.py  test_plugin_library_nodes.py  test_plugin_lifecycle.py  test_plugin_nested_graphs.py  test_plugin_node_inspection.py  test_plugin_node_mutations.py  test_plugin_parameters.py  test_plugin_preview_hash.py  test_plugin_preview_images.py  test_plugin_preview_outputs.py  test_plugin_preview_render.py  test_plugin_python_execution.py  test_plugin_sd_serialization.py  test_plugin_view_capture.py  test_probe_library_node_live_results.py  test_schema.py  test_server.py  test_skill_catalog.py  test_skill_scripts.py
tools/: build_authoring_node_definitions.py  build_release.py  compare_runtime_capture.py  extract_release_notes.py  generate_stubs.py  live_verify.py  merge_library_node_live_results.py  probe_library_node_live_results.py  probe_node_live_result.py  restart-substancedesigner-mcp-win.ps1  start-substancedesigner-mcp-win.ps1  (+4 more)
(+120 files in other folders)
